--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -3,6 +3,7 @@
 {% block content %}
     <form action='' method='POST'>{% csrf_token %}
     {{ form.as_p }}
-    <input type='submit' value='create'>
+    <input style="margin: 30px 50vh;" type='submit' value='create'>
     </form>
+    <style>p {margin: 50vh; margin-top: 40px;}</style>
 {% endblock content %}
