--- a/app/templates/delete.html
+++ b/app/templates/delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-    <form action='' method='POST'>{% csrf_token %}
-    <input type='submit' value='delete'>
+    <form class="alert alert-dark" action='' method='POST'>{% csrf_token %}
+    <input class="alert alert-dark" type='submit' value='delete'>
     </form>
 {% endblock content %}
