--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -3,7 +3,7 @@
 {% block header %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">TodoList</h1>
+      <h1 class="display-4">運動日誌</h1>
       <p class="lead">Todolistを作成して生産的な毎日を過ごしましょう。</p>
     </div>
 </div>
