--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -4,7 +4,8 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">運動日誌</h1>
-      <p class="lead">Todolistを作成して生産的な毎日を過ごしましょう。</p>
+      <p class="lead">自己分析を客観的に行いましょう！</p>
+      <p class="lead">目標を達成するための自己トレーニングを！</p>
     </div>
 </div>
 {% endblock %} 
