--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,9 @@
     {% block content %} 
     {% endblock content %}
   </body>
+
+  <style>body {font-family: 'Fuzzy Bubbles', 'Kiwi Maru', serif;}</style>
+
 </html>
 
  
