add_nav_bar_#10

--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -1,6 +1,23 @@
 {% extends 'base.html' %} 
 
 {% block header %}
+
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li>
+</ul>
+
+
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">運動日誌</h1>
