--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -2,6 +2,33 @@
 
 {% block header %}
 
+<style>
+
+  .hero {
+  display: flex;
+  justify-content: center;
+  object-fit: cover;
+  }
+
+  img {
+  vertical-align: middle;
+  border-style: none;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  }
+
+  .nav {
+      height: 100px;
+  }
+
+  .justify-content-center {
+  justify-content: center!important;
+  align-items: center;
+  }
+
+</style>
+
 <ul class="nav justify-content-center">
   <li class="nav-item">
     <a class="nav-link active" href="#">Active</a>
