--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -25,7 +25,7 @@
 
   .hero {
     position: relative;
-    margin-bottom: 50px;
+    margin-bottom: 150px;
   }
 
   .hero__title {
@@ -92,7 +92,8 @@
     width: 90%;
     margin: 0 auto;
     max-width: 1070px;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
+    margin-bottom: 180px;
   }
 
   a:hover {
@@ -102,6 +103,16 @@
 
   .card-header {
     font-size: 30px;
+    /* background-color: #fff1f1; */
+  }
+
+  .card-header.target {
+    font-size: 30px;
+    background-color: #fff1f1;
+  }
+
+  .card-footer {
+    background-color: #fff1f1;
   }
 
 </style>
@@ -136,13 +147,13 @@
 
 
 <div class="card text-center">
-  <div class="card-header">
-    大会での達成目標(<span class="purple">長期</span>達成目標)
+  <div class="card-header target">
+    大会での達成目標(<span class="purple">長期</span>目標)
   </div>
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/eZA0AnSdbBI?autoplay=1&mute=1&start=28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/eZA0AnSdbBI?autoplay=1&mute=1&start=25" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="card-footer">
     期限:&nbsp;3月25日まで残り<span class="purple">62</span>日
@@ -150,8 +161,8 @@
 </div>
 
 <div class="card text-center">
-  <div class="card-header">
-    今月の達成目標(<span class="purple">中期</span>達成目標)
+  <div class="card-header target">
+    今月の達成目標(<span class="purple">中期</span>目標)
   </div>
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
@@ -164,7 +175,7 @@
 </div>
 
 <div class="card text-center">
-  <div class="card-header">
+  <div class="card-header target">
     今週の達成目標(<span class="purple">短期</span>目標)
   </div>
   <div class="card-body">
@@ -200,11 +211,28 @@
   margin-bottom: 100px;
   }
 
+  .card-text.main {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  }
+
+  /* .card.bg-light {
+    height: 400px;
+  } */
+
 </style>
 
-
-
-
+{% for item in object_list %}
+  <div class="card bg-light mb-3 mb-3" style="max-width: 25rem;">
+    <div class="card-header">Header</div>
+    <div class="card-body">
+      <h5 class="card-title">{{item.title}}</h5>
+      <p class="card-text main">{{item.memo}}</p>
+    </div>
+  </div>
+{% endfor %}
 
 
 <div class="container">
@@ -219,7 +247,7 @@
     {% endfor %} 
 </div>
 
-<div class="card-deck mb-5">
+<!-- <div class="card-deck mb-5">
 
   {% for item in object_list %}
   
@@ -237,6 +265,6 @@
 
   {% endfor %}
   
-</div>
+</div> -->
 
 {% endblock content %}
