--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -469,17 +469,18 @@
 
 <div class="card text-center mt-5">
   <div class="card-header">
-    Featured
+    今週の振り返り
   </div>
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
-  <div class="card-footer text-muted">
+  <!-- <div class="card-footer text-muted">
     2 days ago
-  </div>
+  </div> -->
 </div>
+
 
 <div class="card text-center mt-5">
   <div class="card-header">
@@ -490,9 +491,9 @@
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
-  <div class="card-footer text-muted">
+  <!-- <div class="card-footer text-muted">
     2 days ago
-  </div>
+  </div> -->
 </div>
 
 {% endblock content %}
