--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -484,7 +484,7 @@
 
 <div class="card text-center mt-5">
   <div class="card-header">
-    Featured
+    スタッフから
   </div>
   <div class="card-body">
     <h5 class="card-title">Special title treatment</h5>
