--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -455,7 +455,7 @@
 </div>
 
 
-<!-- <div class="container">
+<div class="container">
     <a href="{% url 'create' %}" class="btn btn-secondary mb-2" tabindex="-1" role="button" aria-disabled="true">新規作成</a>
     {% for item in object_list %} 
     <div class="alert alert-{{ item.priority }}" role="alert">
@@ -465,7 +465,7 @@
         <a href="{% url 'detail' item.pk %}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">詳細画面へ</a>
     </div>
     {% endfor %} 
-</div> -->
+</div>
 
 <div class="card text-center mt-5">
   <div class="card-header">
