--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -465,33 +465,33 @@
     {% endfor %} 
 </div>
 
+{% for item in week %}
 <div class="card text-center mt-5">
   <div class="card-header">
     今週の振り返り
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <h5 class="card-title">{{item.title}}</h5>
+    <p class="card-text">{{item.summary}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
-  <!-- <div class="card-footer text-muted">
-    2 days ago
-  </div> -->
 </div>
+{% endfor %}
 
-
+{% for item in staff %}
 <div class="card text-center mt-5">
   <div class="card-header">
     スタッフから
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <h5 class="card-title">{{item.title}}</h5>
+    <p class="card-text">{{item.staff}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
   <!-- <div class="card-footer text-muted">
     2 days ago
   </div> -->
 </div>
+{% endfor %}
 
 {% endblock content %}
