--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -367,6 +367,7 @@
 </div>
 
 <div class="card text-center">
+  <a class = link href="{% url 't_detail' item.pk %}"></a>
   <div class="card-header target">
     今月の達成目標(<span class="purple">中期</span>目標)
   </div>
@@ -381,6 +382,7 @@
 </div>
 
 <div class="card text-center">
+  <a class = link href="{% url 't_detail' item.pk %}"></a>
   <div class="card-header target">
     今週の達成目標(<span class="purple">短期</span>目標)
   </div>
@@ -419,6 +421,8 @@
     flex-basis: 30%;
     margin-bottom: 100px;
     background-color: #fcfff080 !important;
+    position: relative;
+    cursor: pointer;
   }
 
   .card-container {
@@ -427,6 +431,17 @@
     flex-wrap: wrap;
     width: 90%;
     margin: 0 auto;
+    position: relative;
+  }
+
+  .card-container .link {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
   }
 
   .card-container::after {
@@ -463,7 +478,8 @@
 
 <div class="card-container">
 {% for item in training %}
-  <div class="card bg-light mb-5 mb-5" style="max-width: 25rem;">
+<div class="card bg-light mb-5 mb-5" style="max-width: 25rem;">
+    <a href="{% url 'c_detail' item.pk %}" class="link"></a>
     <div class="card-header main">Header</div>
     <div class="card-body">
       <h5 class="card-title">{{item.dairy_target}}</h5>
