--- a/app/templates/app_staff_detail.html
+++ b/app/templates/app_staff_detail.html
@@ -363,6 +363,8 @@
     flex-basis: 30%;
     margin-bottom: 100px;
     background-color: #fcfff080 !important;
+    position: relative;
+    cursor: pointer;
   }
 
   .card-container {
@@ -371,6 +373,17 @@
     flex-wrap: wrap;
     width: 90%;
     margin: 0 auto;
+    position: relative;
+  }
+
+  .card-container .link {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
   }
 
   .card-container::after {
@@ -406,13 +419,30 @@
 </style>
 
 <div class="card-container">
-  <div class="card bg-light mb-5 mb-5" style="max-width: 25rem;">
+{% for item in training %}
+<div class="card bg-light mb-5 mb-5" style="max-width: 25rem;">
+    <a href="{% url 'c_detail' item.pk %}" class="link"></a>
     <div class="card-header main">Header</div>
     <div class="card-body">
-      <h5 class="card-title">{{object.dairy_target}}</h5>
-      <p class="card-text main">{{object.dairy_target_summary}}</p>
+      <h5 class="card-title">{{item.dairy_target}}</h5>
+      <p class="card-text main">{{item.dairy_target_summary}}</p>
     </div>
   </div>
+{% endfor %}
+</div>
+
+<div class="card text-center mt-5">
+  <div class="card-header">
+    スタッフから
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">{{object.title}}</h5>
+    <p class="card-text">{{object.staff}}</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+  <!-- <div class="card-footer text-muted">
+    2 days ago
+  </div> -->
 </div>
 
 {% endblock content %}
