add_title_link_#63

--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -6,6 +6,15 @@
 
 <style>
 
+  /* .logo.item {
+    position: relative;
+    cursor: pointer;
+  }
+  .logo.item .link {
+    position: relative;
+    z-index: 10;
+  } */
+
   .hero {
   display: flex;
   justify-content: center;
