--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -366,7 +366,7 @@
     <nav class="header__nav">
       <ul class="header__ul">
         <li class="header__li item"><a href="http://fukuokasportstalentidproject.blogspot.com/2010/03/blog-post_4316.html" target="_blank" rel="noopener noreferrer">オリンピック強化選手ホームページ</a></li>
-        <li class="header__li item diary"><a href="https://1.bp.blogspot.com/-3FZ1k9yqBpY/YSsJhBkrKUI/AAAAAAAALX4/kooOBy9ikyQItw8BJdA0jqLyMMAiCnTRgCLcBGAsYHQ/s1754/Jr.%25E6%2597%25A5%25E8%25AA%258C%2B%25E8%25A1%25A8.jpg" target="_blank" rel="noopener noreferrer">運動日誌(本物)</a></li>
+        <li class="header__li item diary"><a href="https://1.bp.blogspot.com/-3FZ1k9yqBpY/YSsJhBkrKUI/AAAAAAAALX4/kooOBy9ikyQItw8BJdA0jqLyMMAiCnTRgCLcBGAsYHQ/s1754/Jr.%25E6%2597%25A5%25E8%25AA%258C%2B%25E8%25A1%25A8.jpg" target="_blank" rel="noopener noreferrer">運動日誌(実物)</a></li>
       </ul>
     </nav>
   </div>
