--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -537,26 +537,28 @@
     <h5 class="card-title">{{item.title}}</h5>
     <p class="card-text">{{item.summary}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="chart-container" style="position: relative; max-width: 80%; max-height: 80%; margin: 0 auto;">
+      <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
   </div>
 </div>
 
 <script>
   const ctx = document.getElementById('myChart').getContext('2d');
   const myChart = new Chart(ctx, {
-      type: 'bar',
+      type: 'line',
       data: {
           labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
           datasets: [{
-              label: '# of Votes',
+              label: 'タイトル',
               data: [12, 19, 3, 5, 2, 3],
               backgroundColor: [
-                  'rgba(255, 99, 132, 0.2)',
-                  'rgba(54, 162, 235, 0.2)',
-                  'rgba(255, 206, 86, 0.2)',
-                  'rgba(75, 192, 192, 0.2)',
-                  'rgba(153, 102, 255, 0.2)',
-                  'rgba(255, 159, 64, 0.2)'
+                  'rgba(0, 0, 0, 0)',
+                  // 'rgba(54, 162, 235, 0.2)',
+                  // 'rgba(255, 206, 86, 0.2)',
+                  // 'rgba(75, 192, 192, 0.2)',
+                  // 'rgba(153, 102, 255, 0.2)',
+                  // 'rgba(255, 159, 64, 0.2)'
               ],
               borderColor: [
                   'rgba(255, 99, 132, 1)',
@@ -566,13 +568,21 @@
                   'rgba(153, 102, 255, 1)',
                   'rgba(255, 159, 64, 1)'
               ],
-              borderWidth: 1
+              borderWidth: 3
           }]
       },
       options: {
-          scales: {
-              y: {
-                  beginAtZero: true
+
+        title: {
+            display: true,
+            text: 'カスタムチャートタイトル'
+        },
+
+        maintainAspectRatio: false,
+
+        scales: {
+            y: {
+                beginAtZero: true
               }
           }
       }
