--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -561,6 +561,8 @@
           labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
           datasets: [{
               label: '',
+              pointRadius: 5,
+              pointBackgroundColor: 'rgba(75, 192, 192, 1)',
               data: [12, 19, 3, 5, 2, 3],
               backgroundColor: [
                   'rgba(0, 0, 0, 0)',
@@ -571,12 +573,12 @@
                   // 'rgba(255, 159, 64, 0.2)'
               ],
               borderColor: [
-                  'rgba(255, 99, 132, 1)',
-                  'rgba(54, 162, 235, 1)',
-                  'rgba(255, 206, 86, 1)',
+                  // 'rgba(255, 99, 132, 1)',
+                  // 'rgba(54, 162, 235, 1)',
+                  // 'rgba(255, 206, 86, 1)',
                   'rgba(75, 192, 192, 1)',
-                  'rgba(153, 102, 255, 1)',
-                  'rgba(255, 159, 64, 1)'
+                  // 'rgba(153, 102, 255, 1)',
+                  // 'rgba(255, 159, 64, 1)'
               ],
               borderWidth: 3
           }]
@@ -588,12 +590,14 @@
         },
 
         title: {
+            responsive: true,
             display: true,
             text: '今週の睡眠時間',
-            fontSize: 30,
+            fontSize: 34,
             fontColor: '#122',
-            padding: 20,
+            padding: 28,
             fontFamily: 'Kiwi Maru',
+            fontStyle: 'normal',
         },
 
         maintainAspectRatio: false,
@@ -606,10 +610,10 @@
             yAxes: [{
               scaleLabel: {
                 display: true,
-                labelString: '睡眠時間',
+                labelString: '睡眠時間 (h)',
                 fontSize: 25,
                 fontColor: '#122',
-                // fontStyle: 'middium',
+                // fontStyle: 'thin',
                 fontFamily: 'Kiwi Maru',
                 // padding: 20,
                 // usePointStyle: True,
@@ -619,6 +623,27 @@
                 suggestedMax: 40,
                 suggestedMin: 0,
                 stepSize: 10,
+                fontSize: 23,
+              }
+            }],
+
+            xAxes: [{
+              // scaleLabel: {
+                // display: true,
+                // labelString: '睡眠時間',
+                // fontSize: 25,
+                // fontColor: '#122',
+                // fontStyle: 'middium',
+                // fontFamily: 'Kiwi Maru',
+                // padding: 20,
+                // usePointStyle: True,
+                // },
+              
+              ticks: {
+                // suggestedMax: 40,
+                // suggestedMin: 0,
+                // stepSize: 10,
+                fontSize: 23,
               }
             }]
           }
