add_graph_data_#68

--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 
-{{test}}
+{{ s_time }}
 
 <style>
 
@@ -558,12 +558,14 @@
   const myChart = new Chart(ctx, {
       type: 'line',
       data: {
-          labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+          // labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+          labels: ['Red', 'Blue',],
           datasets: [{
               label: '',
               pointRadius: 5,
               pointBackgroundColor: 'rgba(75, 192, 192, 1)',
-              data: [12, 19, 3, 5, 2, 3],
+              // data: [12, 19, 3, 5, 2, 3],
+              data: {{ s_time }},
               backgroundColor: [
                   'rgba(0, 0, 0, 0)',
                   // 'rgba(54, 162, 235, 0.2)',
