--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -440,7 +440,7 @@
   }
 
   .card.bg-light {
-    height: 400px;
+    min-height: 400px;
     flex-basis: 30%;
     margin-bottom: 100px;
     background-color: #fcfff080 !important;
