--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -534,7 +534,7 @@
 
 <div class="card-container">
 {% for item in training %}
-<div class="card bg-light mb-5 mb-5" style="max-width: 25rem;">
+<div class="card bg-light mb-5 mb-5 text-center" style="max-width: 25rem;">
     <a href="{% url 'c_detail' item.pk %}" class="link"></a>
     <div class="card-header main">Header</div>
     <div class="card-body">
