--- a/app/templates/app_week_detail.html
+++ b/app/templates/app_week_detail.html
@@ -443,6 +443,7 @@
     <h5 class="card-title">{{object.title}}</h5>
     <p class="card-text">{{object.summary}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="{{request.META.HTTP_REFERER}}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">戻る</a>
   </div>
 </div>
 
