--- a/app/templates/app_target_update.html
+++ b/app/templates/app_target_update.html
@@ -11,4 +11,5 @@
     {{ form.short_target_summary }}
     <input type='submit' value='update'>
     </form>
+    <a href="{{request.META.HTTP_REFERER}}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">戻る</a>
 {% endblock content %}
