--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -482,9 +482,15 @@
     font-size: 40px;
     text-align: center;
     margin-bottom: 80px;
-    width: 90%;
-    margin-left: 5%;
+    /* width: 90%; */
+    /* margin-left: 5%; */
     border: 2px solid;
+  }
+
+  .title {
+    max-width: 1070px;
+    margin: 0 auto;
+    width: 90%;
   }
 
 @media screen and (max-width: 770px) {
