--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -379,7 +379,8 @@
     <h5 class="card-title">{{ item.long_target }}</h5>
     <p class="card-text">{{ item.long_target_summary }}</p>
     <div class="wrapper">
-      <iframe class="content" width="560" height="315" src="https://www.youtube.com/embed/eZA0AnSdbBI?autoplay=1&mute=1&start=25" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!-- <iframe class="content" width="560" height="315" src="https://www.youtube.com/embed/eZA0AnSdbBI?autoplay=1&mute=1&start=25" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+      {{ link_new_long | safe}}
     </div>
   </div>
   <div class="card-footer">
@@ -595,7 +596,7 @@
               pointRadius: 5,
               pointBackgroundColor: 'rgba(75, 192, 192, 1)',
               // data: [12, 19, 3, 5, 2, 3],
-              data: {{ s_time }},
+              data: {{ s_time_new }},
               backgroundColor: [
                   'rgba(0, 0, 0, 0)',
               ],
