fix_form_design_part2

--- a/app/templates/app_home.html
+++ b/app/templates/app_home.html
@@ -416,7 +416,7 @@
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
   <div class="card-footer text-muted">
-    頑張っていきましょう！！
+    頑張っていきましょう!!
   </div>
 </div>
 {% endfor %}
