--- a/app/templates/app_target_update.html
+++ b/app/templates/app_target_update.html
@@ -7,6 +7,11 @@
         margin: 0 auto;
         padding-top: 70px;
       }
+
+      textarea {
+        height: 10vh !important;
+      }
+
     </style>
 
 
@@ -31,40 +36,85 @@
       <div class="form-group">
         <label for="id_long_target">長期目標</label>
         {{ form.long_target }}
+        <small class="text-muted form-text">
+          具体的な数値などを書きましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">長期目標のためにできること</label>
+        {{ form.long_target_summary }}
+        <small class="text-muted">
+          具体的に書きましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">長期目標の期日</label>
+        {{ form.long_target_date }}
+        <small class="text-muted">
+          大会の日程などを書きましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">長期目標のための参考動画</label>
+        {{ form.long_target_link }}
+        <small class="text-muted">
+          こうなりたいと思うプレーの動画を見つけてきましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">参考動画の開始時間</label>
+        {{ form.long_target_link_start }}
+        <small class="text-muted">
+          見たい動画の秒数を入力すると、その時間から自動再生されます
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">中期目標</label>
+        {{ form.middle_target }}
         <small class="text-muted">
           具体的な数値などを書きましょう
         </small>
       </div>
-      {{ form.long_target_summary }}
-      {{ form.long_target_date }}
-      {{ form.long_target_link }}
-      {{ form.long_target_link_start }}
-      {{ form.middle_target }}
-      {{ form.middle_target_summary }}
-      {{ form.middle_target_link }}
-      {{ form.short_target }}
-      {{ form.short_target_summary }}
-      {{ form.short_target_link }}
+      <div class="form-group">
+        <label for="id_long_target">中期目標のためにできること</label>
+        {{ form.middle_target_summary }}
+        <small class="text-muted">
+          具体的に書きましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">中期目標のための参考動画</label>
+        {{ form.middle_target_link }}
+        <small class="text-muted">
+          こうなりたいと思うプレーの動画を見つけてきましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">短期目標</label>
+        {{ form.short_target }}
+        <small class="text-muted">
+          具体的な数値などを書きましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">短期目標のためにできること</label>
+        {{ form.short_target_summary }}
+        <small class="text-muted">
+          具体的に書きましょう
+        </small>
+      </div>
+      <div class="form-group">
+        <label for="id_long_target">短期目標のための参考動画</label>
+        {{ form.short_target_link }}
+        <small class="text-muted">
+          こうなりたいと思うプレーの動画を見つけてきましょう
+        </small>
+      </div>
+      
       <input type='button' value='update' onclick="submit();">
       </form>
     </div>
     <a href="{{request.META.HTTP_REFERER}}" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">戻る</a>
-
-    <label for="inputPassword5">Password</label>
-    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-    <small id="passwordHelpBlock" class="form-text text-muted">
-        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-    </small>
-
-    <form class="form-inline">
-        <div class="form-group">
-          <label for="inputPassword6">Password</label>
-          <input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline">
-          <small id="passwordHelpInline" class="text-muted">
-            Must be 8-20 characters long.
-          </small>
-        </div>
-    </form>
 
 
     <script>
